feat: add launch instructions and jlink description to README